# past-python-bindings

./: .gitignore  Makefile.am  README.md  bindings.cpp  setup.py
.github/workflows/: python-publish.yml
tests/: test_binding.py  test_local_build.sh
tests/gemm/: acc-inter.c  vanilla.c
